--- a/Lab0_PythonReview/KeyTakeAway.ipynb
+++ b/Lab0_PythonReview/KeyTakeAway.ipynb
@@ -2,22 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "423a1ef2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cca605e3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1, 2, 3, 6, 8, 10]\n",
-      "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
     "def quicksort(arr: list) -> list:\n",
     "    if len(arr) <= 1:\n",
     "        return arr\n",
@@ -27,28 +26,53 @@
     "    middle = [x for x in  arr if x == pivot]\n",
     "    right = [x for x in arr if x > pivot]\n",
     "\n",
-    "    return quicksort(left) + middle + quicksort(right)\n",
-    "\n",
-    "print(quicksort([3,6,8,10,1,2,1]))"
+    "    return quicksort(left) + middle + quicksort(right)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "665d6079",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bubble_sort(arr: list) -> list:\n",
+    "    n = len(arr)\n",
+    "    for i in range(n):\n",
+    "        for j in range(n - i - 1):\n",
+    "            if arr[i] > arr[j + 1]:\n",
+    "                arr[j], arr[j + 1] = arr[j + 1], arr[j]\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b71632c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "quicksort(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd1de251",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "bubble_sort(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f1bd47a4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n",
-      "HELLO\n",
-      "he(ell)(ell)o\n",
-      "world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = \"hello\"\n",
     "print(s.capitalize())\n",
@@ -59,19 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5015447b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 1, 2, 'bar']\n",
-      "bar [3, 1, 2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "xs = [3, 1, 2]\n",
     "xs.append(\"bar\")\n",
@@ -85,15 +100,7 @@
    "execution_count": null,
    "id": "85abb5ce",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 1 2 3 4 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(5):\n",
     "    print(i, end = \" \")     # 让输出处于同一行。"
@@ -101,19 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "3db2fd32",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_items([('person', 2), ('cat', 4), ('spider', 8)])\n",
-      "dict_values([2, 4, 8])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "d = {\"person\": 2, \"cat\": 4, \"spider\": 8}\n",
     "print(d.items())\n",
