--- a/N&S_TechniquesInFinance/3. Numerical Computation.ipynb
+++ b/N&S_TechniquesInFinance/3. Numerical Computation.ipynb
@@ -378,6 +378,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1af38e7b",
+   "metadata": {},
+   "source": [
+    "### 机器精度 | Machine Precision\n",
+    "\n",
+    "机器精度是满足 $\\text{float}(1 + \\epsilon_1) > 1$ 的最小正数 $\\varepsilon_1$。\n",
+    "> The machine precision of a floating point arithmetic is defined as the smallest positive number $\\varepsilon_1$ such that $\\text{float}(1 + \\epsilon_1) > 1$\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "5fa5268e",
@@ -397,11 +408,46 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd956f37",
+   "id": "aaab8dc3",
    "metadata": {},
    "source": [
-    "Floating point computation is NOT associative.\n",
-    "> 浮点数不能用结合律"
+    "`np.space(1)`: \n",
+    "- 在浮点数系统中，表示比 $x$ 大的、最邻近 $x$ 的那个数，与 $x$ 本身之间的绝对差值。\n",
+    "- In the floating-point system, the absolute difference between $x$ and the next largest representable floating-point number.\n",
+    "\n",
+    "> 在 $x$ 这个位置，浮点数之间的“最小步长”或“绝对间隔”<br>\n",
+    "> the \"minimum step size\" or the \"absolute interval\" between floating-point numbers at the location $x$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8848e2c",
+   "metadata": {},
+   "source": [
+    "在计算机中，由于用有限的内存（通常是64位）来表示无限多的实数，所以浮点数在数轴上的分布是离散的，而不是连续的。<br>\n",
+    "数字越大，相邻两个可表示的浮点数之间的“间隔”就越大。\n",
+    "\n",
+    "> In computing, because we use a finite amount of memory (typically 64 bits) to represent an infinite set of real numbers, floating-point numbers are discrete on the number line, not continuous. <br>\n",
+    "> The larger the number, the larger the \"gap\" or \"interval\" between two adjacent representable floating-point numbers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1088e52d",
+   "metadata": {},
+   "source": [
+    "#### 金融数值计算的实际意义\n",
+    "\n",
+    "处理大金额时需要格外小心：如果你计算1亿美金（$10^8$）的期权价格，绝对精度间隔是：\n",
+    "\n",
+    "```\n",
+    "ε ≈ 10⁸ × 1.57 × 10⁻¹⁶ ≈ 1.57 × 10⁻⁸ ≈ 0.0000000157\n",
+    "```\n",
+    "\n",
+    "这意味着价格变化小于这个量级时可能被\"淹没\"。\n",
+    "\n",
+    "- 算法稳定性分析：在设计数值算法时，必须考虑当前计算规模的精度限制。\n",
+    "- 变量缩放策略：有时需要将问题缩放到\"单位量级\"附近进行计算，以最大化精度。"
    ]
   },
   {
@@ -419,10 +465,12 @@
    "source": [
     "### 不等间距网格\n",
     "\n",
-    "浮点数（在数轴上的分布不是均匀的，而是对数尺度的。\n",
+    "**浮点数精度的根本性质：绝对误差随着数值增大而线性增大。**\n",
     "\n",
-    "- 在0附近，数字非常密集，间隔很小（例如，小数的精度高）。\n",
-    "- 随着数值变大，间隔逐渐变大（网格变粗糙）。\n",
+    "浮点数（在数轴上的分布不是均匀的，而是对数尺度的。）\n",
+    "\n",
+    "- 在`0`附近，数字非常密集，间隔很小（例如，小数的精度高）。\n",
+    "- 随着数值变大，间隔逐渐变大（稀疏）（网格变粗糙）。\n",
     "\n",
     "这是因为浮点数使用科学计数法：$(-1)^s \\times m \\times 2^e$\n",
     "- $s$：符号位\n",
@@ -430,6 +478,27 @@
     "- $e$：指数，间隔由指数决定。\n",
     "\n",
     "当指数`e`增加时，相邻数字之间的差值（即`np.spacing`）会乘以`2`的幂次。<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "515533bf",
+   "metadata": {},
+   "source": [
+    "#### 金融工程含义\n",
+    "\n",
+    "精度损失的风险分布不均匀\n",
+    "- 在价格接近0的资产（如深度虚值期权）计算中，相对精度较高\n",
+    "- 在大金额计算（如机构级交易）中，绝对误差可能显著放大\n",
+    "```py\n",
+    "# 不好的做法：直接处理极大数值\n",
+    "large_value = 1e8  # 1亿美元\n",
+    "result = large_value + 0.01  # 这个加法可能被\"淹没\"\n",
+    "\n",
+    "# 更好的做法：缩放处理\n",
+    "scaled_value = 1.0  # 以百万为单位\n",
+    "result = scaled_value + 0.01/1e6  # 在单位尺度下计算\n",
+    "```"
    ]
   },
   {
@@ -445,7 +514,7 @@
    "id": "59704785",
    "metadata": {},
    "source": [
-    "### 浮点数舍入：几何级数\n",
+    "### 浮点数舍入：几何级数 | Float rounding: Geometric series\n",
     "\n",
     "几何级数 $$\\sum_{p=-10}^{10}10^p = (10^{10}-10^{-10})/9$$ 在数学上是精确的等式。这个级数包含从 $10^{-10}$ 到 $10^{10}$ 的`21`项。\n"
    ]
@@ -500,8 +569,8 @@
     "- 十进制表示，避免二进制舍入误差\n",
     "- 精确处理极大和极小的数值\n",
     "\n",
-    "> 但是，和 Numpy 不兼容。\n",
-    "> 计算速度较慢\n",
+    "> 但是，和 Numpy 不兼容。<br>\n",
+    "> 计算速度较慢<br>\n",
     "> 需要手动管理精度设置"
    ]
   },
