--- a/NandS_TechniquesInFinance/Assignments/A1.ipynb
+++ b/NandS_TechniquesInFinance/Assignments/A1.ipynb
@@ -67,7 +67,7 @@
    "id": "70f9acda",
    "metadata": {},
    "source": [
-    "### **Question 1**  &nbsp;&nbsp; (10 points)\n",
+    "### **Question 1**\n",
     "\n",
     "a\\) Write a Python function to compute the Theta of a European Call option in the Black-Scholes model.\n",
     "\n",
@@ -152,7 +152,7 @@
    "id": "661203c7-9924-47df-b286-8ffd0e7cf618",
    "metadata": {},
    "source": [
-    "### **Question 2**  &nbsp;&nbsp; (10 points)\n",
+    "### **Question 2**\n",
     "\n",
     "Since $\\Theta$ is a partial derivative of an analytical formula (the Black-Scholes European Call option price), another way to estimate it is to use a finite-difference scheme. \n",
     "Implement a *forward-difference scheme* on the European Call option price to estimate its Theta. Use the following array for the values of $T$\n",
@@ -241,7 +241,7 @@
    "id": "8a63485d-77d9-4469-a85d-7cc60cf27aa5",
    "metadata": {},
    "source": [
-    "### **Question 3**  &nbsp;&nbsp; (10 points)\n",
+    "### **Question 3**\n",
     "\n",
     "a\\) Write a Python program to find the value of $N$ such that the *absolute error* between the analytical $\\Theta$ and the forward-difference approximation of $\\Theta$ at $T=T_{\\min}=1/52$ becomes lower than $10^{-2}$. \n",
     "\n",
