--- a/Investment_Practice/Lab1_Numpy/Lab1_Numpy_ch.ipynb
+++ b/Investment_Practice/Lab1_Numpy/Lab1_Numpy_ch.ipynb
@@ -42,8 +42,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 练习1：股票价格数组\n",
     "创建 NumPy 数组来表示股票价格数据。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -113,12 +127,19 @@
     }
    ],
    "source": [
-    "print(\"Apple Stock Prices:\", aapl_prices)\n",
-    "print(\"\\nPortfolio Prices:\")\n",
-    "print(portfolio_prices)\n",
-    "print(\"\\nArray shapes:\")\n",
-    "print(f\"AAPL prices shape: {aapl_prices.shape}\")\n",
-    "print(f\"Portfolio prices shape: {portfolio_prices.shape}\")"
+    "# print(\"Apple Stock Prices:\", aapl_prices)\n",
+    "# print(\"\\nPortfolio Prices:\")\n",
+    "# print(portfolio_prices)\n",
+    "# print(\"\\nArray shapes:\")\n",
+    "# print(f\"AAPL prices shape: {aapl_prices.shape}\")\n",
+    "# print(f\"Portfolio prices shape: {portfolio_prices.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -127,6 +148,13 @@
    "source": [
     "## 练习 2：回报率计算\n",
     "使用 NumPy 操作计算投资回报率。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -183,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -205,13 +233,20 @@
     }
    ],
    "source": [
-    "print(\"AAPL Daily Returns:\", aapl_returns)\n",
-    "print(f\"AAPL Total Return: {aapl_total_return:.4f} or {aapl_total_return*100:.2f}%\")\n",
-    "print(\"\\nPortfolio Daily Returns:\")\n",
-    "print(portfolio_returns)\n",
-    "print(\"\\nReturn shapes:\")\n",
-    "print(f\"AAPL daily returns shape: {aapl_returns.shape}\")\n",
-    "print(f\"Portfolio returns shape: {portfolio_returns.shape}\")"
+    "# print(\"AAPL Daily Returns:\", aapl_returns)\n",
+    "# print(f\"AAPL Total Return: {aapl_total_return:.4f} or {aapl_total_return*100:.2f}%\")\n",
+    "# print(\"\\nPortfolio Daily Returns:\")\n",
+    "# print(portfolio_returns)\n",
+    "# print(\"\\nReturn shapes:\")\n",
+    "# print(f\"AAPL daily returns shape: {aapl_returns.shape}\")\n",
+    "# print(f\"Portfolio returns shape: {portfolio_returns.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -220,6 +255,13 @@
    "source": [
     "## 练习3：统计分析\n",
     "计算用于投资分析的关键统计指标。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -305,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -326,16 +368,23 @@
     }
    ],
    "source": [
-    "stock_names = ['AAPL', 'MSFT', 'GOOGL']\n",
+    "# stock_names = ['AAPL', 'MSFT', 'GOOGL']\n",
     "\n",
-    "print(f\"AAPL Mean Daily Return: {aapl_mean_return:.4f} ({aapl_mean_return*100:.2f}%)\")\n",
-    "print(f\"AAPL Volatility: {aapl_volatility:.4f} ({aapl_volatility*100:.2f}%)\")\n",
-    "print(\"\\nPortfolio Statistics:\")\n",
-    "for i, stock in enumerate(stock_names):\n",
-    "    print(f\"{stock}: Mean Return = {portfolio_mean_returns[i]:.4f} ({portfolio_mean_returns[i]*100:.2f}%), Volatility = {portfolio_volatility[i]:.4f} ({portfolio_volatility[i]*100:.2f}%)\")\n",
+    "# print(f\"AAPL Mean Daily Return: {aapl_mean_return:.4f} ({aapl_mean_return*100:.2f}%)\")\n",
+    "# print(f\"AAPL Volatility: {aapl_volatility:.4f} ({aapl_volatility*100:.2f}%)\")\n",
+    "# print(\"\\nPortfolio Statistics:\")\n",
+    "# for i, stock in enumerate(stock_names):\n",
+    "#     print(f\"{stock}: Mean Return = {portfolio_mean_returns[i]:.4f} ({portfolio_mean_returns[i]*100:.2f}%), Volatility = {portfolio_volatility[i]:.4f} ({portfolio_volatility[i]*100:.2f}%)\")\n",
     "\n",
-    "print(f\"\\nBest performing stock: {stock_names[best_stock_idx]}\")\n",
-    "print(f\"Worst performing stock: {stock_names[worst_stock_idx]}\")"
+    "# print(f\"\\nBest performing stock: {stock_names[best_stock_idx]}\")\n",
+    "# print(f\"Worst performing stock: {stock_names[worst_stock_idx]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -344,6 +393,13 @@
    "source": [
     "## 练习 4：投资组合权重与价值\n",
     "本练习涉及投资组合构成的处理及投资组合价值的计算。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -416,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -436,13 +492,20 @@
     }
    ],
    "source": [
-    "print(\"Number of shares:\", shares)\n",
-    "print(\"Portfolio values over time:\", portfolio_values)\n",
-    "print(\"\\nInitial stock values:\", initial_stock_values)\n",
-    "print(\"Portfolio weights:\", portfolio_weights)\n",
-    "print(f\"Weight percentages: AAPL={portfolio_weights[0]*100:.1f}%, MSFT={portfolio_weights[1]*100:.1f}%, GOOGL={portfolio_weights[2]*100:.1f}%\")\n",
-    "print(\"\\nPortfolio daily returns:\", portfolio_daily_returns)\n",
-    "print(f\"Portfolio mean daily return: {np.mean(portfolio_daily_returns):.4f} ({np.mean(portfolio_daily_returns)*100:.2f}%)\")"
+    "# print(\"Number of shares:\", shares)\n",
+    "# print(\"Portfolio values over time:\", portfolio_values)\n",
+    "# print(\"\\nInitial stock values:\", initial_stock_values)\n",
+    "# print(\"Portfolio weights:\", portfolio_weights)\n",
+    "# print(f\"Weight percentages: AAPL={portfolio_weights[0]*100:.1f}%, MSFT={portfolio_weights[1]*100:.1f}%, GOOGL={portfolio_weights[2]*100:.1f}%\")\n",
+    "# print(\"\\nPortfolio daily returns:\", portfolio_daily_returns)\n",
+    "# print(f\"Portfolio mean daily return: {np.mean(portfolio_daily_returns):.4f} ({np.mean(portfolio_daily_returns)*100:.2f}%)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -451,6 +514,13 @@
    "source": [
     "## 练习5：数组创建函数\n",
     "使用NumPy函数创建用于金融建模的数组。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -510,16 +580,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "price_levels = np.linspace(aapl_prices.min(), aapl_prices.max(), 11)"
+    "price_levels = np.linspace(100, 200, 21)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -543,13 +613,20 @@
     }
    ],
    "source": [
-    "print(\"Correlation Matrix:\")\n",
-    "print(correlation_matrix)\n",
-    "print(\"\\nEqual weights portfolio:\", equal_weights)\n",
-    "print(\"\\nFirst 10 trading days:\", trading_days[:10])\n",
-    "print(f\"Total trading days: {len(trading_days)}\")\n",
-    "print(\"\\nPrice levels for analysis:\")\n",
-    "print(price_levels)"
+    "# print(\"Correlation Matrix:\")\n",
+    "# print(correlation_matrix)\n",
+    "# print(\"\\nEqual weights portfolio:\", equal_weights)\n",
+    "# print(\"\\nFirst 10 trading days:\", trading_days[:10])\n",
+    "# print(f\"Total trading days: {len(trading_days)}\")\n",
+    "# print(\"\\nPrice levels for analysis:\")\n",
+    "# print(price_levels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -558,6 +635,13 @@
    "source": [
     "## 练习6：高级数组索引\n",
     "使用高级索引来分析股票表现"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -627,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -647,14 +731,21 @@
     }
    ],
    "source": [
-    "print(\"Positive return days:\", positive_return_days)\n",
-    "print(\"Positive returns:\", positive_returns)\n",
-    "print(f\"Number of positive return days: {np.sum(positive_return_days)}\")\n",
-    "print(\"\\nMaximum prices by stock:\", max_prices)\n",
-    "print(\"Days of maximum prices:\", max_price_days)\n",
-    "print(\"\\nStocks with positive average returns:\", profitable_stocks)\n",
-    "profitable_stock_names = np.array(stock_names)[profitable_stocks]\n",
-    "print(\"Profitable stock names:\", profitable_stock_names)"
+    "# print(\"Positive return days:\", positive_return_days)\n",
+    "# print(\"Positive returns:\", positive_returns)\n",
+    "# print(f\"Number of positive return days: {np.sum(positive_return_days)}\")\n",
+    "# print(\"\\nMaximum prices by stock:\", max_prices)\n",
+    "# print(\"Days of maximum prices:\", max_price_days)\n",
+    "# print(\"\\nStocks with positive average returns:\", profitable_stocks)\n",
+    "# profitable_stock_names = np.array(stock_names)[profitable_stocks]\n",
+    "# print(\"Profitable stock names:\", profitable_stock_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -663,6 +754,13 @@
    "source": [
     "## 练习7：广播机制与投资组合分析\n",
     "使用NumPy广播机制高效计算投资组合。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -678,7 +776,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normalized_prices = portfolio_prices / portfolio_prices[:, 0].reshape(-1, 1)"
+    "normalized_prices = portfolio_prices / portfolio_prices[:, 0].reshape(-1, 1)\n",
+    "# normalized_prices = portfolio_prices / portfolio_prices[:, [0]]"
    ]
   },
   {
@@ -718,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -741,12 +840,19 @@
     }
    ],
    "source": [
-    "print(\"Normalized prices (relative to initial price):\")\n",
-    "print(normalized_prices)\n",
-    "print(\"\\nNet returns (after transaction costs):\")\n",
-    "print(net_returns)\n",
-    "print(\"\\nWeighted portfolio returns:\", weighted_portfolio_returns)\n",
-    "print(f\"Average weighted portfolio return: {np.mean(weighted_portfolio_returns):.4f} ({np.mean(weighted_portfolio_returns)*100:.2f}%)\")"
+    "# print(\"Normalized prices (relative to initial price):\")\n",
+    "# print(normalized_prices)\n",
+    "# print(\"\\nNet returns (after transaction costs):\")\n",
+    "# print(net_returns)\n",
+    "# print(\"\\nWeighted portfolio returns:\", weighted_portfolio_returns)\n",
+    "# print(f\"Average weighted portfolio return: {np.mean(weighted_portfolio_returns):.4f} ({np.mean(weighted_portfolio_returns)*100:.2f}%)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -755,6 +861,13 @@
    "source": [
     "## 练习 8：随机投资组合模拟\n",
     "生成随机数据以模拟投资组合场景。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -802,11 +915,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cummulative_returns = np.cumprod(1 + simulated_returns, axis = 1) - 1"
+    "cummulative_returns = np.cumprod(1 + simulated_returns, axis = 2) - 1"
    ]
   },
   {
@@ -827,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -856,8 +969,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 练习9：数组重塑与聚合\n",
     "通过重塑金融数据，实现多角度分析。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -911,24 +1038,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "创建重塑视图以计算交叉相关性"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "returns_reshaped = weekly_returns.reshape(3, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -954,17 +1065,17 @@
     }
    ],
    "source": [
-    "print(\"Original portfolio prices shape:\", portfolio_prices.shape)\n",
-    "print(\"Weekly prices shape:\", weekly_prices.shape)\n",
-    "print(\"\\nWeekly returns:\")\n",
-    "print(weekly_returns)\n",
-    "print(\"\\nFlattened returns shape:\", all_returns_flat.shape)\n",
-    "print(\"Flattened returns:\", all_returns_flat)\n",
-    "print(\"Overall return statistics:\")\n",
-    "print(f\"Mean: {np.mean(all_returns_flat):.4f}\")\n",
-    "print(f\"Std: {np.std(all_returns_flat):.4f}\")\n",
-    "print(f\"Min: {np.min(all_returns_flat):.4f}\")\n",
-    "print(f\"Max: {np.max(all_returns_flat):.4f}\")"
+    "# print(\"Original portfolio prices shape:\", portfolio_prices.shape)\n",
+    "# print(\"Weekly prices shape:\", weekly_prices.shape)\n",
+    "# print(\"\\nWeekly returns:\")\n",
+    "# print(weekly_returns)\n",
+    "# print(\"\\nFlattened returns shape:\", all_returns_flat.shape)\n",
+    "# print(\"Flattened returns:\", all_returns_flat)\n",
+    "# print(\"Overall return statistics:\")\n",
+    "# print(f\"Mean: {np.mean(all_returns_flat):.4f}\")\n",
+    "# print(f\"Std: {np.std(all_returns_flat):.4f}\")\n",
+    "# print(f\"Min: {np.min(all_returns_flat):.4f}\")\n",
+    "# print(f\"Max: {np.max(all_returns_flat):.4f}\")"
    ]
   },
   {
