--- a/Investment_Practice/Lab1_Numpy/Lab1_Numpy_ch.ipynb
+++ b/Investment_Practice/Lab1_Numpy/Lab1_Numpy_ch.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,26 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Apple Stock Prices: [150.  152.5 148.  155.  157.5]\n",
-      "\n",
-      "Portfolio Prices:\n",
-      "[[ 150  152  148  155]\n",
-      " [ 300  305  298  310]\n",
-      " [2800 2850 2780 2900]]\n",
-      "\n",
-      "Array shapes:\n",
-      "AAPL prices shape: (5,)\n",
-      "Portfolio prices shape: (3, 4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(\"Apple Stock Prices:\", aapl_prices)\n",
     "# print(\"\\nPortfolio Prices:\")\n",
@@ -168,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,27 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AAPL Daily Returns: [ 0.01666667 -0.0295082   0.0472973   0.01612903]\n",
-      "AAPL Total Return: 0.0500 or 5.00%\n",
-      "\n",
-      "Portfolio Daily Returns:\n",
-      "[[ 0.01333333 -0.02631579  0.0472973 ]\n",
-      " [ 0.01666667 -0.02295082  0.04026846]\n",
-      " [ 0.01785714 -0.0245614   0.04316547]]\n",
-      "\n",
-      "Return shapes:\n",
-      "AAPL daily returns shape: (4,)\n",
-      "Portfolio returns shape: (3, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(\"AAPL Daily Returns:\", aapl_returns)\n",
     "# print(f\"AAPL Total Return: {aapl_total_return:.4f} or {aapl_total_return*100:.2f}%\")\n",
@@ -273,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,26 +312,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AAPL Mean Daily Return: 0.0126 (1.26%)\n",
-      "AAPL Volatility: 0.0274 (2.74%)\n",
-      "\n",
-      "Portfolio Statistics:\n",
-      "AAPL: Mean Return = 0.0114 (1.14%), Volatility = 0.0301 (3.01%)\n",
-      "MSFT: Mean Return = 0.0113 (1.13%), Volatility = 0.0261 (2.61%)\n",
-      "GOOGL: Mean Return = 0.0122 (1.22%), Volatility = 0.0279 (2.79%)\n",
-      "\n",
-      "Best performing stock: GOOGL\n",
-      "Worst performing stock: MSFT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# stock_names = ['AAPL', 'MSFT', 'GOOGL']\n",
     "\n",
@@ -411,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,25 +420,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of shares: [100  50  10]\n",
-      "Portfolio values over time: [58000 58950 57500 60000]\n",
-      "\n",
-      "Initial stock values: [15000 15000 28000]\n",
-      "Portfolio weights: [0.25862069 0.25862069 0.48275862]\n",
-      "Weight percentages: AAPL=25.9%, MSFT=25.9%, GOOGL=48.3%\n",
-      "\n",
-      "Portfolio daily returns: [ 0.01637931 -0.02459712  0.04347826]\n",
-      "Portfolio mean daily return: 0.0118 (1.18%)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(\"Number of shares:\", shares)\n",
     "# print(\"Portfolio values over time:\", portfolio_values)\n",
@@ -532,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,29 +521,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correlation Matrix:\n",
-      "[[1. 0. 0.]\n",
-      " [0. 1. 0.]\n",
-      " [0. 0. 1.]]\n",
-      "\n",
-      "Equal weights portfolio: [0.33333333 0.33333333 0.33333333]\n",
-      "\n",
-      "First 10 trading days: [ 1  2  3  4  5  6  7  8  9 10]\n",
-      "Total trading days: 252\n",
-      "\n",
-      "Price levels for analysis:\n",
-      "[148.   148.95 149.9  150.85 151.8  152.75 153.7  154.65 155.6  156.55\n",
-      " 157.5 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(\"Correlation Matrix:\")\n",
     "# print(correlation_matrix)\n",
@@ -653,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,25 +623,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Positive return days: [ True False  True]\n",
-      "Positive returns: [0.01637931 0.04347826]\n",
-      "Number of positive return days: 2\n",
-      "\n",
-      "Maximum prices by stock: [ 155  310 2900]\n",
-      "Days of maximum prices: [3 3 3]\n",
-      "\n",
-      "Stocks with positive average returns: [ True  True  True]\n",
-      "Profitable stock names: ['AAPL' 'MSFT' 'GOOGL']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(\"Positive return days:\", positive_return_days)\n",
     "# print(\"Positive returns:\", positive_returns)\n",
@@ -772,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,28 +713,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Normalized prices (relative to initial price):\n",
-      "[[1.         1.01333333 0.98666667 1.03333333]\n",
-      " [1.         1.01666667 0.99333333 1.03333333]\n",
-      " [1.         1.01785714 0.99285714 1.03571429]]\n",
-      "\n",
-      "Net returns (after transaction costs):\n",
-      "[[ 0.01233333 -0.02731579  0.0462973 ]\n",
-      " [ 0.01566667 -0.02395082  0.03926846]\n",
-      " [ 0.01685714 -0.0255614   0.04216547]]\n",
-      "\n",
-      "Weighted portfolio returns: [ 0.01637931 -0.02459859  0.04348482]\n",
-      "Average weighted portfolio return: 0.0118 (1.18%)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(\"Normalized prices (relative to initial price):\")\n",
     "# print(normalized_prices)\n",
@@ -881,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,11 +776,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulated_returns = np.random.normal(0.001, 0.02, size = (num_simulations, num_days, num_stocks))"
+    "simulated_returns = np.random.normal(0.001, 0.02, size = (num_simulations, num_stocks, num_days))"
    ]
   },
   {
@@ -915,11 +792,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cummulative_returns = np.cumprod(1 + simulated_returns, axis = 2) - 1"
+    "cumulative_returns = np.cumprod(1 + simulated_returns, axis = 2) - 1"
    ]
   },
   {
@@ -931,38 +808,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "portfolio_final_returns = cummulative_returns[:, -1, :].mean(axis = 1)"
+    "final_returns = cumulative_returns[:, :, -1]  # 获取最后一天的收益率\n",
+    "portfolio_final_returns = np.sum(final_returns * portfolio_weights, axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulated returns shape: (1000, 30, 3)\n",
-      "Final portfolio returns statistics:\n",
-      "Mean: 0.0316 (3.16%)\n",
-      "Std: 0.0665 (6.65%)\n",
-      "5th percentile (VaR): -0.0790 (-7.90%)\n",
-      "95th percentile: 0.1429 (14.29%)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(f\"Simulated returns shape: {simulated_returns.shape}\")\n",
-    "print(f\"Final portfolio returns statistics:\")\n",
-    "print(f\"Mean: {np.mean(portfolio_final_returns):.4f} ({np.mean(portfolio_final_returns)*100:.2f}%)\")\n",
-    "print(f\"Std: {np.std(portfolio_final_returns):.4f} ({np.std(portfolio_final_returns)*100:.2f}%)\")\n",
-    "print(f\"5th percentile (VaR): {np.percentile(portfolio_final_returns, 5):.4f} ({np.percentile(portfolio_final_returns, 5)*100:.2f}%)\")\n",
-    "print(f\"95th percentile: {np.percentile(portfolio_final_returns, 95):.4f} ({np.percentile(portfolio_final_returns, 95)*100:.2f}%)\")"
+    "# print(f\"Simulated returns shape: {simulated_returns.shape}\")\n",
+    "# print(f\"Final portfolio returns statistics:\")\n",
+    "# print(f\"Mean: {np.mean(portfolio_final_returns):.4f} ({np.mean(portfolio_final_returns)*100:.2f}%)\")\n",
+    "# print(f\"Std: {np.std(portfolio_final_returns):.4f} ({np.std(portfolio_final_returns)*100:.2f}%)\")\n",
+    "# print(f\"5th percentile (VaR): {np.percentile(portfolio_final_returns, 5):.4f} ({np.percentile(portfolio_final_returns, 5)*100:.2f}%)\")\n",
+    "# print(f\"95th percentile: {np.percentile(portfolio_final_returns, 95):.4f} ({np.percentile(portfolio_final_returns, 95)*100:.2f}%)\")"
    ]
   },
   {
@@ -998,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,31 +904,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original portfolio prices shape: (3, 4)\n",
-      "Weekly prices shape: (3, 2, 2)\n",
-      "\n",
-      "Weekly returns:\n",
-      "[[0.01333333 0.0472973 ]\n",
-      " [0.01666667 0.04026846]\n",
-      " [0.01785714 0.04316547]]\n",
-      "\n",
-      "Flattened returns shape: (12,)\n",
-      "Flattened returns: [ 150  152  148  155  300  305  298  310 2800 2850 2780 2900]\n",
-      "Overall return statistics:\n",
-      "Mean: 1095.6667\n",
-      "Std: 1229.9911\n",
-      "Min: 148.0000\n",
-      "Max: 2900.0000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(\"Original portfolio prices shape:\", portfolio_prices.shape)\n",
     "# print(\"Weekly prices shape:\", weekly_prices.shape)\n",
