--- a/Investment_Practice/Lab1_Numpy/Lab1_Numpy_en.ipynb
+++ b/Investment_Practice/Lab1_Numpy/Lab1_Numpy_en.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 490,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 492,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 495,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 496,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 497,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 500,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 501,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 502,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 503,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 504,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 505,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 506,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 507,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 508,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 509,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 510,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 511,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 512,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 513,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 514,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 515,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 516,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 517,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 518,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 519,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 520,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 521,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 522,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,11 +769,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 523,
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulated_returns = np.random.normal(0.001, 0.02, size = (num_simulations, num_days, num_stocks))"
+    "simulated_returns = np.random.normal(0.001, 0.02, size = (num_simulations, num_stocks, num_days))"
    ]
   },
   {
@@ -785,11 +785,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 524,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cummulative_returns = np.cumprod(1 + simulated_returns, axis = 2) - 1"
+    "cumulative_returns = np.cumprod(1 + simulated_returns, axis = 2) - 1"
    ]
   },
   {
@@ -801,38 +801,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "portfolio_final_returns = cummulative_returns[:, -1, :].mean(axis = 1)"
+    "final_returns = cumulative_returns[:, :, -1]  # Get the last day returns\n",
+    "portfolio_final_returns = np.sum(final_returns * portfolio_weights, axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 526,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Simulated returns shape: (1000, 30, 3)\n",
-      "Final portfolio returns statistics:\n",
-      "Mean: 0.0025 (0.25%)\n",
-      "Std: 0.0253 (2.53%)\n",
-      "5th percentile (VaR): -0.0388 (-3.88%)\n",
-      "95th percentile: 0.0442 (4.42%)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(f\"Simulated returns shape: {simulated_returns.shape}\")\n",
-    "print(f\"Final portfolio returns statistics:\")\n",
-    "print(f\"Mean: {np.mean(portfolio_final_returns):.4f} ({np.mean(portfolio_final_returns)*100:.2f}%)\")\n",
-    "print(f\"Std: {np.std(portfolio_final_returns):.4f} ({np.std(portfolio_final_returns)*100:.2f}%)\")\n",
-    "print(f\"5th percentile (VaR): {np.percentile(portfolio_final_returns, 5):.4f} ({np.percentile(portfolio_final_returns, 5)*100:.2f}%)\")\n",
-    "print(f\"95th percentile: {np.percentile(portfolio_final_returns, 95):.4f} ({np.percentile(portfolio_final_returns, 95)*100:.2f}%)\")"
+    "# print(f\"Simulated returns shape: {simulated_returns.shape}\")\n",
+    "# print(f\"Final portfolio returns statistics:\")\n",
+    "# print(f\"Mean: {np.mean(portfolio_final_returns):.4f} ({np.mean(portfolio_final_returns)*100:.2f}%)\")\n",
+    "# print(f\"Std: {np.std(portfolio_final_returns):.4f} ({np.std(portfolio_final_returns)*100:.2f}%)\")\n",
+    "# print(f\"5th percentile (VaR): {np.percentile(portfolio_final_returns, 5):.4f} ({np.percentile(portfolio_final_returns, 5)*100:.2f}%)\")\n",
+    "# print(f\"95th percentile: {np.percentile(portfolio_final_returns, 95):.4f} ({np.percentile(portfolio_final_returns, 95)*100:.2f}%)\")"
    ]
   },
   {
@@ -868,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 527,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 528,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 529,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 530,
    "metadata": {},
    "outputs": [],
    "source": [
