--- a/Investment_Practice/Assignments/A1/A1_Leveraged_ETF_Analysis.ipynb
+++ b/Investment_Practice/Assignments/A1/A1_Leveraged_ETF_Analysis.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "imports",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "simulation-setup",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "generate-scenarios",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "simulation-function",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "run-simulations",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "load-data",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "rolling-volatility",
    "metadata": {},
    "outputs": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "theoretical-model",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "comparison-analysis",
    "metadata": {},
    "outputs": [
@@ -858,7 +858,14 @@
     "\n",
     "**Your Answer:**\n",
     "```\n",
-    "CODE HERE: Write your analysis. You can use calculated numbers to support your explanation.\n",
+    "\n",
+    "Based on the simulation analysis, TQQQ significantly underperforms in high volatility sideways markets due to the mathematical phenomenon of volatility decay.\n",
+    "\n",
+    "· In the high volatility sideways simulation (3% daily vol, 0% trend), QQQ returned approximately 8.1% while TQQQ returned -38.5%, significantly worse than the expected 24.2%.\n",
+    "· The theoretical model explains this: E[R_TQQQ] ≈ 3 × E[R_QQQ] - 3 × Var[R_QQQ]. With 3% daily volatility (variance = 0.0009), the volatility decay term becomes -0.27% daily, accumulating to substantial losses over time.\n",
+    "· Real data analysis confirms this pattern. During period 2 (high volatility sideways), TQQQ underperformed the theoretical model by 0.73% due to extreme volatility conditions.\n",
+    "\n",
+    "Mechanism: Daily rebalancing forces TQQQ to \"buy high and sell low\" during volatile periods. Each large price swing creats compounding losses that accumulate even when the underlying index ends flat.\n",
     "\n",
     "```\n",
     "\n",
@@ -874,8 +881,28 @@
     "\n",
     "**Your Answer:**\n",
     "```\n",
-    "CODE HERE: Write your analysis\n",
     "\n",
+    "For Day Traders:\n",
+    "· Use TQQQ when: VIX < 20 and strong trending signals present.\n",
+    "· Ideal for momentum plays lasting 1-5 days.\n",
+    "· Avoid during earnings season or FOMC meetings when volatility spikes.\n",
+    "\n",
+    "For Long-term Investors:\n",
+    "· Use TQQQ only in:\n",
+    "    · Sustained bull markets (QQQ > 200-day VIX)\n",
+    "    · Volatility regimes with VIX < 15\n",
+    "    · As tactical allocation (<10% portfolio)\n",
+    "· Avoid during:\n",
+    "    · High volatility period (VIX > 25)\n",
+    "    · Sideways markets (QQQ 50-day volatility > 2%)\n",
+    "    · As core long-term holding due to decay\n",
+    "\n",
+    "Specific Thresholds:\n",
+    "· Entry Signal: 30-day QQQ volatility < 1.5% + uptrend confirmation\n",
+    "· Exit Signal: 30-day QQQ volatility > 2.5% or trend breakdown\n",
+    "· Risk management: 15% trailing stop loss.\n",
+    "\n",
+    "Alternatives: During high volatility, consider QQQ options strategies or volatility-neutral approaches instead of leveraged ETFs.\n",
     "\n",
     "```\n",
     "\n",
@@ -887,10 +914,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bonus-code",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "💡 Bonus analysis - explore patterns in the real data!\n"
+     ]
+    }
+   ],
    "source": [
     "# Optional: Explore additional patterns in the data\n",
     "# Examples:\n",
@@ -899,6 +934,93 @@
     "# - Analysis of maximum drawdowns\n",
     "\n",
     "print(\"💡 Bonus analysis - explore patterns in the real data!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2aedd18e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum Drawdown Analysis:\n",
+      "QQQ: -22.77% over 1 days\n",
+      "TQQQ: -58.04% over 1 days\n",
+      "Leverage Effect: 2.5x amplification\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_max_drawdown(series):\n",
+    "    \"\"\"Calculate maximum drawdown and duration\"\"\"\n",
+    "    cumulative = (1 + series).cumprod()\n",
+    "    running_max = cumulative.expanding().max()\n",
+    "    drawdown = (cumulative - running_max) / running_max\n",
+    "    max_dd = drawdown.min()\n",
+    "    max_dd_duration = (drawdown == max_dd).sum()\n",
+    "    return max_dd, max_dd_duration\n",
+    "\n",
+    "qqq_max_dd, qqq_dd_duration = calculate_max_drawdown(returns[\"QQQ\"])\n",
+    "tqqq_max_dd, tqqq_dd_duration = calculate_max_drawdown(returns[\"TQQQ\"])\n",
+    "\n",
+    "print(f\"Maximum Drawdown Analysis:\")\n",
+    "print(f\"QQQ: {qqq_max_dd:.2%} over {qqq_dd_duration} days\")\n",
+    "print(f\"TQQQ: {tqqq_max_dd:.2%} over {tqqq_dd_duration} days\")\n",
+    "print(f\"Leverage Effect: {tqqq_max_dd/qqq_max_dd:.1f}x amplification\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4f066a71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Volatility persistence: 20 significant lags\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.tsa.stattools import acf\n",
+    "\n",
+    "# Volatility Clustering Analysis\n",
+    "volatility_lags = acf(rolling_vol.dropna(), nlags = 20)\n",
+    "significant_lags = sum(abs(volatility_lags[1:]) > 0.1)\n",
+    "print(f\"Volatility persistence: {significant_lags} significant lags\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe79bc00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After +2% QQQ days: 0.22% avg 5-day TQQQ return\n",
+      "After -2% QQQ days: -0.47% avg 5-day TQQQ return\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extreme Move Analysis\n",
+    "large_up_moves = returns[\"QQQ\"] > 0.02\n",
+    "large_down_moves = returns[\"QQQ\"] < -0.02\n",
+    "\n",
+    "# Analyze subsequent performance\n",
+    "up_move_forward_returns = returns[\"TQQQ\"].shift(-5)[large_up_moves].mean()\n",
+    "down_move_forward_returns = returns[\"TQQQ\"].shift(-5)[large_down_moves].mean()\n",
+    "\n",
+    "print(f\"After +2% QQQ days: {up_move_forward_returns:.2%} avg 5-day TQQQ return\")\n",
+    "print(f\"After -2% QQQ days: {down_move_forward_returns:.2%} avg 5-day TQQQ return\")"
    ]
   },
   {
